--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,9 +27,10 @@ a {
     color: $light;
 }
 
-.contanier {
+.container {
     max-width: 1280px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .home,
@@ -77,7 +78,8 @@ a {
     justify-content: center;
     gap: 157px;
 
-    &__showSide>img {
+
+    &__showSide img {
         display: none;
         animation: moving 0.5s ease;
 
@@ -94,7 +96,7 @@ a {
         }
     }
 
-    &__showSide>img.active {
+    &__showSide img.active {
         display: block;
     }
 }
