--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import 'globals/colors';
 @import 'home';
+@import 'destination';
+@import 'crew';
 @import './components/navbar';
 
 html {
@@ -33,32 +35,15 @@ a {
     padding: 0 15px;
 }
 
-.home,
-.destination,
 .crew,
 .technology {
     background: url('../assets/space_background.webp') no-repeat;
     background-size: cover;
     padding-top: 40px;
-    padding-bottom: 162px;
+    // padding-bottom: 128px;
 }
 
-.destination {
-    background: url('../assets/moon_background.png') no-repeat;
-    background-size: cover;
 
-    &__title {
-        margin-top: 76px;
-        margin-bottom: 66px;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
-        letter-spacing: 4.725px;
-        text-transform: uppercase;
-        color: $light;
-        text-align: left;
-    }
-}
 
 .crew {
     background: url('../assets/crew_bg.png') no-repeat;
