technology page is almost ready

--- a/sass/_destination.scss
+++ b/sass/_destination.scss
@@ -2,6 +2,7 @@
     background: url('../assets/moon_background.png') no-repeat;
     background-size: cover;
     padding-bottom: 162px;
+    padding-top: 40px;
 
     &__title {
         margin-top: 76px;
