--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'home';
 @import 'destination';
 @import 'crew';
+@import 'technology';
 @import './components/navbar';
 
 html {
@@ -40,7 +41,6 @@ a {
     background: url('../assets/space_background.webp') no-repeat;
     background-size: cover;
     padding-top: 40px;
-    // padding-bottom: 128px;
 }
 
 
