--- a/sass/_crew.scss
+++ b/sass/_crew.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .crew {
 
     .container {
@@ -5,6 +7,22 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
+
+    @media (max-width: 1024px) {
+        .container {
+            display: block;
+
+            img {
+                width: 368.85px;
+            }
+        }
+
+        &__imgSide {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     & span {
@@ -33,16 +51,29 @@
         line-height: 64px;
         text-transform: uppercase;
         color: #FFFFFF;
+
+    }
+
+    @media (max-width: 1024px) {
+        &__heading {
+            font-size: 40px;
+            line-height: 46px;
+            /* identical to box height */
+            text-align: center;
+
+        }
+
+        &__commander-text {
+            font-size: 24px;
+            line-height: 28px;
+            text-align: center;
+        }
     }
 
     &__text {
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 32px;
-        /* or 178% */
-
-
+        @include barlowText();
         color: #D0D6F9;
+        max-width: 400px;
     }
 
     .swiper-pagination-bullet {
