--- a/sass/_technology.scss
+++ b/sass/_technology.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .technology {
     padding-bottom: 162px;
 
@@ -5,9 +7,10 @@
         font-weight: 400;
         font-size: 28px;
         line-height: 34px;
-        /* identical to box height */
         letter-spacing: 4.725px;
         color: #FFFFFF;
+
+
     }
 
     .container {
@@ -18,17 +21,48 @@
             align-items: center;
             justify-content: space-between;
 
+            @media (min-width: 1024px) {
+                gap: 40px;
+            }
+
+            @media (max-width: 1024px) {
+                flex-direction: column-reverse;
+
+                &__content {
+                    order: -1;
+                }
+            }
+
             &__content {
                 display: none;
+                animation: moving 1.5s ease;
+
+
 
                 &.active {
                     display: block;
+                }
+
+                @media (max-width: 1024px) {
+                    &.active {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                }
+            }
+
+            &__bullets {
+                margin: 50px 0;
+
+                @media (max-width: 1024px) {
+                    display: flex;
+                    gap: 16px;
                 }
             }
 
             &__bullets>div {
                 cursor: pointer;
-                border: 1px solid #FFFFFF;
+                border: 1px solid #cdb6b6;
                 color: #fff;
                 width: 80px;
                 height: 80px;
@@ -38,9 +72,18 @@
                 justify-content: center;
                 font-size: 32px;
                 line-height: 37px;
+                transition: 0.3s ease;
 
                 &:not(:first-child) {
                     margin-top: 32px;
+
+                    @media (max-width: 1024px) {
+                        margin-top: 0;
+                    }
+                }
+
+                &:hover {
+                    border: 1px solid #fff;
                 }
 
                 &.active {
@@ -57,33 +100,40 @@
                 letter-spacing: 2.7px;
 
                 color: #D0D6F9;
+
+                @media (max-width: 1024px) {
+                    text-align: center;
+                }
             }
 
 
             &__heading {
                 font-family: 'Bellefair', serif;
-                ;
                 margin-top: 11px;
                 margin-bottom: 17px;
                 font-weight: 400;
                 font-size: 56px;
                 line-height: 64px;
                 color: #FFFFFF;
+
+                @media (max-width: 1024px) {
+                    text-align: center;
+                }
+
             }
 
             &__text {
-                font-weight: 400;
-                font-size: 18px;
-                line-height: 32px;
+                @include barlowText();
                 color: #D0D6F9;
                 max-width: 444px;
+
             }
         }
     }
 
     &__image-side>img {
         display: none;
-
+        animation: moving 1.5s ease;
     }
 
     &__image-side>img.active {
