--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,9 +31,22 @@ a {
 }
 
 .container {
-    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 15px;
+
+    @media (min-width: 768px) {
+        max-width: 768px
+    }
+
+    @media (min-width: 1024px) {
+        max-width: 1024px
+    }
+
+    @media (min-width: 1280px) {
+        max-width: 1280px;
+    }
+
 }
 
 .crew,
@@ -53,155 +66,4 @@ a {
 .technology {
     background: url('../assets/technology.png') no-repeat;
     background-size: cover;
-}
-
-
-
-.pick-destination {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 157px;
-
-
-    &__showSide img {
-        display: none;
-        animation: moving 0.5s ease;
-
-        @keyframes moving {
-            from {
-                transform: translateX(50px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateX(0px);
-                opacity: 1;
-            }
-        }
-    }
-
-    &__showSide img.active {
-        display: block;
-    }
-}
-
-.tab-box {
-    position: relative;
-
-    &__line {
-        position: absolute;
-        transition: 0.3s ease;
-        width: 61px;
-        height: 3px;
-        background: $light;
-        left: 0;
-    }
-
-    &__tab {
-        border: none;
-        background: transparent;
-        font-size: 16px;
-        line-height: 19px;
-        letter-spacing: 2.7px;
-        color: #D0D6F9;
-        cursor: pointer;
-        padding-bottom: 12px;
-
-        &:not(:first-child) {
-            margin-left: 35px;
-        }
-
-        &.active {
-            color: $light;
-        }
-    }
-
-    &__content {
-        margin-top: 37px;
-        display: none;
-        animation: moving 0.5s ease;
-        max-width: 444px;
-
-        @keyframes moving {
-            from {
-                transform: translateX(50px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateX(0px);
-                opacity: 1;
-            }
-        }
-
-        &.active {
-            display: block;
-        }
-    }
-
-    &__info {
-        margin-top: 28px;
-        display: flex;
-        align-items: center;
-        gap: 85px;
-    }
-
-    &__distance {
-        &>span {
-            font-weight: 400;
-            font-size: 28px;
-            line-height: 32px;
-            text-transform: uppercase;
-            color: $light;
-        }
-
-        &>p {
-            margin-bottom: 12px;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 17px;
-            letter-spacing: 2.3625px;
-            text-transform: uppercase;
-            color: #D0D6F9;
-        }
-    }
-
-    &__time {
-        &>span {
-            font-weight: 400;
-            font-size: 28px;
-            line-height: 32px;
-            text-transform: uppercase;
-            color: $light;
-        }
-
-        &>p {
-            margin-bottom: 12px;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 17px;
-            letter-spacing: 2.3625px;
-            text-transform: uppercase;
-            color: #D0D6F9;
-        }
-    }
-
-    &__title {
-        font-size: 100px;
-        line-height: 115px;
-        color: $light;
-        font-weight: 400;
-    }
-
-    &__text {
-        padding-bottom: 56px;
-        border-bottom: 1px solid #383B4B;
-        margin-top: 14px;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 32px;
-        color: #D0D6F9;
-    }
-
 }
