--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'destination';
 @import 'crew';
 @import 'technology';
+@import './components/logo';
 @import './components/navbar';
 
 html {
