--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,5 +5,10 @@
 
     @media (max-width: 768px) {
         top: 24px;
+
+        & img {
+            width: 40px;
+            height: 40px;
+        }
     }
 }
